2002-11-27  Hiroyuki Ito <hito@crl.go.jp>

	* [w3m-dev 03488] meta refresh in frame
	* file.c (getMetaRefreshParam): added
		(HTMLtagproc1): use getMetaRefreshParam()
	* frame.c (createFrameFile): check meta refresh
	* proto.h (getMetaRefreshProgram): added

2002-11-27  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* w3m 0.3.2.1 security fix
	* frame.c (createFrameFile): html_quote()

2002-11-27  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03486] fix of displayLineInfo
	* display.c (displayBuffer): don't divide by 0

2002-11-26  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03485] fix mouse menu position
	* main.c (do_mouse_action): use anchor_map is no active_map
			check top left corner
		(FRAME_WIDTH): added
		(menuMs): adjust cursorX using FRAME_WIDTH

2002-11-26  Fumitoshi UKAI  <ukai@debian.or.jp>

	* NEWS: func: CLOSE_TAB_MOUSE, MENU_MOUSE, MOVE_MOUSE, TAB_MOUSE

2002-11-26  Fumitoshi UKAI  <ukai@debian.or.jp>

	* doc/README.mouse_menu: deleted
	* doc/README.mouse: added
	* doc-jp/README.mouse_menu: deleted
	* doc-jp/README.mouse: added

2002-11-26  Fumitoshi UKAI  <ukai@debian.or.jp>

	* map.c (follow_map_menu): MapArea *a is used ifdef MENU_MAP
	* func.c (initMouseAction): remove unsed variables: x, width, map

2002-11-26  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03478] mouse action configuration
	* display.c (displayBuffer): mouse_menu -> mouse_action.menu_str
				mouse_action.lastline_str
			(redrawNLine): mouse_menu -> mouse_action.menu_str
	* fm.h (MouseMenuMap): deleted
		(MouseActionMap): added
		(MouseAction): added
		(mouse_action): added
	* func.c (default_mouse_action): added
		(setMouseAction0): added
		(setMouseAction1): added
		(setMouseAction2): added
		(initMouseMenu): deleted
		(initMouseAction): added
	* funcname.tab (CLOSE_TAB_MOUSE): added
		(MENU_MOUSE): added
		(MOVE_MOUSE): added
		(TAB_MOUSE): added
	* main.c (main): initMouseMenu() -> initMouseAction()
			mouse_menu -> mouse_action